--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch"
+    "test": "jest --watch --transformIgnorePatterns 'node_modules/(?!swiper)/'",
+    "test:coverage": "jest --coverage --transformIgnorePatterns 'node_modules/(?!swiper)/'"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^4.14.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "20.2.3",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -22,8 +26,11 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-slick": "^0.29.0",
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
+    "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
+    "ts-jest": "^29.1.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
