--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "lottie-react": "^2.4.0",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -37,6 +38,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "jest": "^29.5.0",
+    "jest-canvas-mock": "^2.5.1",
     "jest-environment-jsdom": "^29.5.0",
     "prisma": "^4.14.1"
   }
