--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "chart.js": "^4.3.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "lottie-react": "^2.4.0",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-compound-slider": "^3.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
