--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^4.14.1",
+    "@react-icons/all-files": "https://github.com/react-icons/react-icons/releases/download/v4.9.0/react-icons-all-files-4.9.0.tgz",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/user-event": "^14.4.3",
     "@types/node": "20.2.3",
@@ -21,6 +22,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "chart.js": "^4.3.0",
+    "dayjs": "^1.11.8",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "lottie-react": "^2.4.0",
@@ -30,7 +32,6 @@
     "react-chartjs-2": "^5.2.0",
     "react-compound-slider": "^3.4.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
@@ -38,6 +39,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
