--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "20.2.3",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "@types/react-window": "^1.8.5",
     "autoprefixer": "10.4.14",
     "chart.js": "^4.3.0",
     "dayjs": "^1.11.8",
@@ -33,6 +34,9 @@
     "react-compound-slider": "^3.4.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-virtualized-auto-sizer": "^1.0.20",
+    "react-window": "^1.8.9",
+    "react-window-infinite-loader": "^1.0.9",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "ts-jest": "^29.1.0",
